Fix accent color

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -90,15 +90,15 @@ StScrollBar StButton#vhandle {
 StScrollBar StButton#vhandle:hover {
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 StScrollBar StButton#vhandle:active {
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 StScrollBar StButton#hhandle {
@@ -114,15 +114,15 @@ StScrollBar StButton#hhandle {
 StScrollBar StButton#hhandle:hover {
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 StScrollBar StButton#hhandle:active {
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 /* Check Boxes */
@@ -253,8 +253,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .popup-menu-item:insensitive {
@@ -310,7 +310,7 @@ StScrollBar StButton#hhandle:active {
 .toggle-switch-intl:checked {
     background-image: url("toggle-on.png");
     background-size: contain;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 /* Network */
@@ -400,7 +400,7 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
     border: none;
     border-image: none;
 }
@@ -413,7 +413,7 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
     border: none;
     border-image: none;
 }
@@ -426,8 +426,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .notification-button:focus:active,
@@ -438,7 +438,7 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
     border: none;
     border-image: none;
 }
@@ -463,7 +463,7 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
     border: none;
     border-image: none;
 }
@@ -485,14 +485,14 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 .hotplug-resident-eject-button:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 /* fix for media player extension buttons */
@@ -534,7 +534,7 @@ StScrollBar StButton#hhandle:active {
 .modal-dialog StEntry {
     caret-color: #666;
     caret-size: 1px;
-    selection-background-color: #1a8;
+    selection-background-color: #11aa89;
     selected-color: #eee;
     padding: 5px 12px 6px;
     box-shadow: none;
@@ -743,8 +743,8 @@ StScrollBar StButton#hhandle:active {
 .panel-button:hover:overview {
     color: #eee;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
     text-shadow: none;
 }
 
@@ -752,8 +752,8 @@ StScrollBar StButton#hhandle:active {
 .panel-button:focus {
     color: #eee;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
     border-image: none;
     text-shadow: none;
 }
@@ -770,8 +770,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .panel-button:active > .system-status-icon,
@@ -819,16 +819,16 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .system-menu-action:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 
 }
 
@@ -869,7 +869,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .workspace-thumbnail-indicator {
-    border: 2px solid #1a8;
+    border: 2px solid #11aa89;
     border-radius: 4px;
     padding: 1px;
 }
@@ -894,7 +894,7 @@ StScrollBar StButton#hhandle:active {
 .window-close, .notification-close {
     background-image: url("close-window.svg");
     background-size: 28px;
-    background-color: #1a8;
+    background-color: #11aa89;
     border: 2px solid rgba(255, 255, 255, 1);
     border-radius: 16px;
     height: 28px;
@@ -906,7 +906,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .window-clone-border {
-    border: 2px solid #1a8;
+    border: 2px solid #11aa89;
     border-radius: 4px;
 }
 
@@ -1266,8 +1266,8 @@ StScrollBar StButton#hhandle:active {
     border-radius: 4px;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
     border-image: none;
     text-shadow: none;
     transition-duration: 100ms;
@@ -1302,8 +1302,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
     transition-duration: 100ms;
 }
 
@@ -1325,8 +1325,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 /* LookingGlass */
@@ -1373,7 +1373,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .lg-dialog StEntry {
-    selection-background-color: #1a8;
+    selection-background-color: #11aa89;
     selected-color: #eee;
 }
 
@@ -1543,14 +1543,14 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 .calendar-day-base:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 .calendar-day-heading {
@@ -1588,7 +1588,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .calendar-today {
-    color: #1a8;
+    color: #11aa89;
     text-shadow: none;
     font-weight: bold;
 }
@@ -1597,7 +1597,7 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 .calendar-day-with-events {
@@ -1868,8 +1868,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .hotplug-resident-mount-label {
@@ -1959,8 +1959,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .summary-source-button:focus .summary-source,
@@ -1982,7 +1982,7 @@ StScrollBar StButton#hhandle:active {
 
     color: #eee;
     background-image: none;
-    background-color: #1a8;
+    background-color: #11aa89;
     border: 2px solid #eee;
     border-radius: 2.1em;
     font-size: 10pt;
@@ -2057,15 +2057,15 @@ StScrollBar StButton#hhandle:active {
 
 .switcher-list .item-box:outlined {
     padding: 6px;
-    border: 1px solid #1a8;
+    border: 1px solid #11aa89;
 }
 
 .switcher-list .item-box:selected {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .switcher-list .thumbnail-box {
@@ -2100,7 +2100,7 @@ StScrollBar StButton#hhandle:active {
 
 .switcher-arrow:highlighted {
     border-color: transparent;
-    color: #1a8;
+    color: #11aa89;
 }
 
 /* Workspace Switcher */
@@ -2129,7 +2129,7 @@ StScrollBar StButton#hhandle:active {
 .ws-switcher-active-up {
     height: 100px;
     border: none;
-    background-color: #1a8;
+    background-color: #11aa89;
     background-image: url("ws-switch-arrow-up.png");
     border-radius: 4px;
 }
@@ -2137,7 +2137,7 @@ StScrollBar StButton#hhandle:active {
 .ws-switcher-active-down {
     height: 100px;
     border: none;
-    background-color: #1a8;
+    background-color: #11aa89;
     background-image: url("ws-switch-arrow-down.png");
     border-radius: 4px;
 }
@@ -2152,7 +2152,7 @@ StScrollBar StButton#hhandle:active {
 /* Tile previews */
 .tile-preview {
     background-color: rgba(17,170,136,0.3);
-    border: 1px solid #1a8; /* theme selected bg color */
+    border: 1px solid #11aa89; /* theme selected bg color */
 }
 
 .tile-preview-left.on-primary {
@@ -2178,7 +2178,7 @@ StScrollBar StButton#hhandle:active {
 .end-session-dialog-subject {
     font-size: 12pt;
     font-weight: bold;
-    color: #1a8;
+    color: #11aa89;
 }
 
 .modal-dialog {
@@ -2383,7 +2383,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .show-processes-dialog-app-list-item:hover {
-    color: #1a8;
+    color: #11aa89;
 }
 
 .show-processes-dialog-app-list-item:ltr {
@@ -2424,7 +2424,7 @@ StScrollBar StButton#hhandle:active {
 .prompt-dialog-headline {
     font-size: 12pt;
     font-weight: bold;
-    color: #1a8;
+    color: #11aa89;
 }
 
 .prompt-dialog-description:rtl {
@@ -2545,16 +2545,16 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .keyboard-key:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .keyboard-subkeys {
@@ -2593,13 +2593,13 @@ StScrollBar StButton#hhandle:active {
 .candidate-box:selected {
     border-radius: 4px;
     color: #eee;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 .candidate-box:hover {
     border-radius: 4px;
     color: #eee;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 .candidate-page-button-box {
@@ -2636,7 +2636,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .framed-user-icon:hover {
-    border: 1px solid #1a8;
+    border: 1px solid #11aa89;
 }
 
 .login-dialog-banner {
@@ -2693,7 +2693,7 @@ StScrollBar StButton#hhandle:active {
 
 .login-dialog-user-list:expanded .login-dialog-user-list-item:focus {
     color: #eee;
-    background-color: #1a8;
+    background-color: #11aa89;
 }
 
 .login-dialog-user-list:expanded .login-dialog-user-list-item:logged-in {
@@ -2790,24 +2790,24 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .login-dialog .modal-dialog-button:default:focus {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .login-dialog .modal-dialog-button:default:hover {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .login-dialog .modal-dialog-button:default:active,
@@ -2815,8 +2815,8 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #1a8;
-    border-color: #1a8;
+    background-color: #11aa89;
+    border-color: #11aa89;
 }
 
 .login-dialog .modal-dialog-button:default:insensitive {
