--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -791,7 +791,7 @@ StScrollBar StButton#hhandle:active {
 }
 
 .system-status-icon {
-    icon-size: 1.09em;
+    icon-size: 16px;
     padding: 0 5px;
 }
 
