--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -387,7 +387,8 @@ StScrollBar StButton#hhandle:active {
     background-image: none;
     background-gradient-direction: none;
     background-color: rgba(49,55,54,0.2);
-    border: none;
+    border: 1px solid #4f4f4f;
+    border-radius: 10px;
     border-image: none;
     transition-duration: 100ms;
 }
@@ -401,7 +402,7 @@ StScrollBar StButton#hhandle:active {
     background-image: none;
     background-gradient-direction: none;
     background-color: #11aa89;
-    border: none;
+    border: 1px solid #11aa89;
     border-image: none;
 }
 
@@ -414,7 +415,7 @@ StScrollBar StButton#hhandle:active {
     background-image: none;
     background-gradient-direction: none;
     background-color: #11aa89;
-    border: none;
+    border: 1px solid #11aa89;
     border-image: none;
 }
 
@@ -427,7 +428,7 @@ StScrollBar StButton#hhandle:active {
     background-image: none;
     background-gradient-direction: none;
     background-color: #11aa89;
-    border-color: #11aa89;
+    border: 1px solid #11aa89;
 }
 
 .notification-button:focus:active,
@@ -439,7 +440,7 @@ StScrollBar StButton#hhandle:active {
     background-image: none;
     background-gradient-direction: none;
     background-color: #11aa89;
-    border: none;
+    border: 1px solid #11aa89;
     border-image: none;
 }
 
@@ -463,8 +464,9 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     background-image: none;
     background-gradient-direction: none;
-    background-color: #11aa89;
-    border: none;
+    background-color: #0f9376;
+    border: 1px solid #0f9376;
+    box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.35);
     border-image: none;
 }
 
@@ -625,8 +627,9 @@ StScrollBar StButton#hhandle:active {
     border-color: #313736;
     border-bottom-width: 0;
     font-weight: bold;
-    height: 2.1em;
+    height: 32px;
     transition-duration: 100ms;
+    box-shadow : 0 2px 5px 0 rgba(0, 0, 0, 0.35);
 }
 
 #panel.in-overview,
@@ -812,7 +815,7 @@ StScrollBar StButton#hhandle:active {
     color: #eee;
     border-radius: 32px; /* wish we could do 50% */
     padding: 13px;
-    border: 1px solid #313736; /* using rgba() is flaky unfortunately */
+    border: 1px solid #4f4f4f; /* using rgba() is flaky unfortunately */
 }
 
 .system-menu-action:hover,
@@ -830,7 +833,7 @@ StScrollBar StButton#hhandle:active {
     background-gradient-direction: none;
     background-color: #11aa89;
     border-color: #11aa89;
-
+    box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.35);
 }
 
 .system-menu-action > StIcon {
@@ -977,6 +980,7 @@ StScrollBar StButton#hhandle:active {
     background-gradient-direction: none;
     background-color: transparent;
     border: none;
+    box-shadow : 0 2px 5px 0 rgba(0, 0, 0, 0.35);
 }
 
 #dash:desktop {
@@ -988,6 +992,7 @@ StScrollBar StButton#hhandle:active {
     border: none;
     border-radius: 4px 4px 0 0;
     transition-duration:500ms;
+    box-shadow : inset 0 0 15px rgba(255,255,255,0.20);
 }
 
 #dash:rtl {
